--- a/05_Flow_control_statement_For_loop.ipynb
+++ b/05_Flow_control_statement_For_loop.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ajju198821/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,15 +39,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lHexb1UAseK6"
+        "id": "lHexb1UAseK6",
+        "outputId": "7cc389be-0b5a-45ad-f0d6-62efa61bbe53",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# range\n",
         "for i in range(9, 19, 3):\n",
         "  print (i, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 12 15 18 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,7 +73,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8YRJCPP2vVPe"
+        "id": "8YRJCPP2vVPe",
+        "outputId": "b6e70806-9ffa-4219-b385-569b14fe45a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# list\n",
@@ -69,8 +85,16 @@
         "for each_item in my_list:\n",
         "  print (each_item, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,19 +104,31 @@
       "source": [
         "my_list = ['a', 'e', 'i', 'o', 'u']\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lWRcH-oE0nr6"
+        "id": "lWRcH-oE0nr6",
+        "outputId": "5d85003c-9ce9-4249-e5f8-eba8da6d5039",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "test_char = input(\"Enter Character: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter Character: A\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -106,19 +142,31 @@
         "    test_result = 'vowel'\n",
         "    break"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FXsvQh-C1C-m"
+        "id": "FXsvQh-C1C-m",
+        "outputId": "9cd62c27-6fd5-4335-ef6f-1890030070a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (test_result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -130,19 +178,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20,2)]"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IbKt_IhW6Z4z"
+        "id": "IbKt_IhW6Z4z",
+        "outputId": "c3cb5f2a-b5e1-4bc6-f804-0d3834e6c6b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -154,19 +217,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20) if (number % 2 == 1)]"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ahswgAU_qBVR"
+        "id": "ahswgAU_qBVR",
+        "outputId": "b36fe9e1-9f05-464e-8c2a-ed522d96b990",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,13 +258,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Kw7G5iCumaY"
+        "id": "2Kw7G5iCumaY",
+        "outputId": "7e41e71c-5544-4b39-9c1b-d29807e2a946",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]"
+        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]\n",
+        "sqr_list = []\n",
+        "#my_list = [j for j in range(10)]\n",
+        "#print(my_list)\n",
+        "for i in [j for j in range(10)]:\n",
+        "  i = i**2\n",
+        "  #print(i)\n",
+        "  sqr_list.append(i)\n",
+        "print(sqr_list)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
