--- a/06_While_Loop_Flow_Control.ipynb
+++ b/06_While_Loop_Flow_Control.ipynb
@@ -62,10 +62,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BPjFgz1-wgvK",
-        "outputId": "410bac12-da2f-44ab-c8e1-cd9be1291df0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "410bac12-da2f-44ab-c8e1-cd9be1291df0"
       },
       "source": [
         "while (i < 10):\n",
@@ -109,10 +109,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8ADO1xTtxAdK",
-        "outputId": "38700fd3-3a24-41ed-d5da-33512e8ad172",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "38700fd3-3a24-41ed-d5da-33512e8ad172"
       },
       "source": [
         "while (b < 10000):\n",
@@ -157,10 +157,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "rjpLoZPy5GF3",
-        "outputId": "0e583390-c5b2-46eb-8e7a-e59a31503c72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0e583390-c5b2-46eb-8e7a-e59a31503c72"
       },
       "source": [
         "while (str_len > 0):\n",
@@ -192,37 +192,42 @@
       "cell_type": "code",
       "metadata": {
         "id": "prvBHO7u7p-R",
-        "outputId": "521dce3d-6a59-449c-d1df-3965c913bcad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "19495e83-e2af-4d95-8cfc-90defce49eeb"
       },
       "source": [
         "# Exercise to print the pattern in increasing order\n",
         "i=0\n",
+        "#j=0\n",
         "my_str = '***********'\n",
         "str_len = len(my_str)\n",
         "while (i<str_len):\n",
-        "  print(my_str[i:])\n",
+        "  j=0\n",
+        "  while (j<=i):\n",
+        "    print(my_str[j], end='')\n",
+        "    j=j+1\n",
+        "  print()\n",
         "  i= i+1\n"
       ],
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "***********\n",
-            "**********\n",
-            "*********\n",
-            "********\n",
-            "*******\n",
-            "******\n",
-            "*****\n",
-            "****\n",
-            "***\n",
+            "*\n",
             "**\n",
-            "*\n"
+            "***\n",
+            "****\n",
+            "*****\n",
+            "******\n",
+            "*******\n",
+            "********\n",
+            "*********\n",
+            "**********\n",
+            "***********\n"
           ]
         }
       ]
