--- a/08_File_Processing.ipynb
+++ b/08_File_Processing.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "08 File Processing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEK0fUwDfn7xm6b4V5d5DI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,19 +23,41 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/08_File_Processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ajju198821/fmml2021/blob/main/08_File_Processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "on0OBs9S-eiS"
+        "id": "on0OBs9S-eiS",
+        "outputId": "841e551e-54ac-49ff-9225-42250e73520c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!wget https://raw.githubusercontent.com/aosp-mirror/platform_external_protobuf/master/CONTRIBUTORS.txt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-09-16 15:57:33--  https://raw.githubusercontent.com/aosp-mirror/platform_external_protobuf/master/CONTRIBUTORS.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3924 (3.8K) [text/plain]\n",
+            "Saving to: ‘CONTRIBUTORS.txt’\n",
+            "\n",
+            "CONTRIBUTORS.txt    100%[===================>]   3.83K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-09-16 15:57:33 (54.4 MB/s) - ‘CONTRIBUTORS.txt’ saved [3924/3924]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -47,7 +68,7 @@
         "infile_pointer = open(\"CONTRIBUTORS.txt\", \"r\")\n",
         "outfile_pointer = open(\"emails-id.txt\", \"w\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,6 +99,159 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QCb8fsP-VUmf",
+        "outputId": "f7f25a5d-2d93-4ea9-afab-f692a306472b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-09-16 16:53:31--  https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 43014 (42K) [text/plain]\n",
+            "Saving to: ‘sp-imp-spec.txt’\n",
+            "\n",
+            "\rsp-imp-spec.txt       0%[                    ]       0  --.-KB/s               \rsp-imp-spec.txt     100%[===================>]  42.01K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-09-16 16:53:31 (90.9 MB/s) - ‘sp-imp-spec.txt’ saved [43014/43014]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5bk3rzvaVpeK"
+      },
+      "source": [
+        "inputFile= open(\"sp-imp-spec.txt\", \"r\")\n",
+        "outputFile = open(\"start-file.txt\", \"w\")"
+      ],
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qVpG1J_kXE-W",
+        "outputId": "7636a997-413d-475d-8231-40ef50bb42c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for each_line in inputFile:\n",
+        "  each_line = each_line.strip()\n",
+        "  if (len(each_line)>0 and each_line[0]=='-'):\n",
+        "      print (each_line) \n",
+        "      outputFile.write(each_line +\"\\n\")\n",
+        "inputFile.close()\n",
+        "outputFile.close()"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "- How parsing and execution of queries work\n",
+            "- Lex (mentioned above) is the \"compiled\" query, that is the output from\n",
+            "- THD is the \"run-time\" state of a connection, containing all that is\n",
+            "- Item_*:  During parsing, all data is translated into \"items\", objects of\n",
+            "- How to fit Stored Procedure into this scheme\n",
+            "- An overview of the classes and files for stored procedures\n",
+            "- class sp_head (sp_head.{cc,h})\n",
+            "- class sp_pcontext (sp_pcontext.{cc,h}\n",
+            "- class sp_instr (sp_head.{cc,h})\n",
+            "- sp_instr_stmt\n",
+            "- sp_instr_set\n",
+            "- sp_instr_jump\n",
+            "- sp_instr_jump_if_not\n",
+            "- sp_instr_freturn\n",
+            "- class sp_rcontext (sp_rcontext.h)\n",
+            "- class Item_splocal (Item.{cc,h})\n",
+            "- Utility functions (sp.{cc,h})\n",
+            "- Parsing CREATE PROCEDURE ...\n",
+            "- Parameters:\n",
+            "- Declared local variables:\n",
+            "- Local Variable references:\n",
+            "- Statements:\n",
+            "- SET var:\n",
+            "- Flow control:\n",
+            "- Forward jumps: When jumping forward, the exact destination is not\n",
+            "- Loop constructs have optional labels. If a loop doesn't have a\n",
+            "- There are two types of CASE. The \"simple\" case is implemented\n",
+            "- A simple example\n",
+            "- Parsing CREATE FUNCTION ...\n",
+            "- Storing, caching, dropping...\n",
+            "- CALLing a procedure\n",
+            "- USE database\n",
+            "- It's possible to write \"general\" procedures that are independent of\n",
+            "- It's possible to write procedures that work on a particular database\n",
+            "- Evaluating Items\n",
+            "- When SETing a variable\n",
+            "- When CALLing a procedure\n",
+            "- When testing an expression for a branch (in IF, WHILE, etc)\n",
+            "- Calling a FUNCTION\n",
+            "- Detecting and parsing a FUNCTION invocation\n",
+            "- Collecting FUNCTIONs to invoke\n",
+            "- We can't read and parse the FUNCTION from the mysql.proc table at the\n",
+            "- Parsing DROP PROCEDURE/FUNCTION\n",
+            "- Condition and Handlers\n",
+            "- sp_instr_hpush_jump\n",
+            "- sp_instr_hpop\n",
+            "- Examples:\n",
+            "- EXIT handler\n",
+            "- CONTINUE handler\n",
+            "- Cursors\n",
+            "- sp_instr_cpush\n",
+            "- sp_instr_cpop\n",
+            "- sp_instr_copen\n",
+            "- sp_instr_cfetch\n",
+            "- sp_instr_cclose\n",
+            "- Example:\n",
+            "- The SP cache\n",
+            "- Class and function APIs\n",
+            "- The parser context: sp_pcontext.h\n",
+            "- The run-time context (call frame): sp_rcontext.h\n",
+            "- The procedure: sp_head.h\n",
+            "- Instructions\n",
+            "- The base class:\n",
+            "- Statement instruction:\n",
+            "-  SET instruction:\n",
+            "- Unconditional jump\n",
+            "- Conditional jump\n",
+            "- Return a function value\n",
+            "- Push a handler and jump\n",
+            "- Pops handlers\n",
+            "- Return from a CONTINUE handler\n",
+            "- Push a CURSOR\n",
+            "- Pop CURSORs\n",
+            "- Open a CURSOR\n",
+            "- Close a CURSOR\n",
+            "- Fetch a row with CURSOR\n",
+            "- Utility functions: sp.h\n",
+            "- The cache: sp_cache.h\n",
+            "- The mysql.proc schema:\n",
+            "--\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
